inline svg's instead of img for dynamic changes; color applies but not hover; TODO: change contrast on footer icons, fix icon sizing in footer

--- a/src/css/components/site-nav.css
+++ b/src/css/components/site-nav.css
@@ -90,6 +90,10 @@
         > .navitems > .itembox:hover > .itemtext {
             color: var(--color-neutral2);
         }
+        > .navitems > .itembox:active > .itemtext {
+            color: var(--color-neutral-active);
+            
+        }
         > .navitems > .itembox.-active > .itemtext {
             color: var(--color-neutral2);
             &::after {
